<resources>
    <string name="app_name">Majas</string>
    <string name="action_settings">Settings</string>
    <string name="pengertiann">Pengertian</string>
    <string name="pengertian">majas adalah gaya bahasa yang digunakan untuk menyampaikan pesan dengan cara yang imajinatif atau berupa kiasan. Sifat majas secara umum adalah tidak pada makna yang sebenarnya atau kiasan atau bermakna konotasi.</string>
    <string name="contoh">Pena itu menari-nari di atas kertas.</string>
    <string name="contohh">Contoh</string>
</resources>
